# bookcourt

./: CMakeLists.txt  README.md  build.sh.half  design.drawio
config/: info_params.json  urls.json  urls.json.backup
frontend/: index.html
frontend/assets/js/: index.js
runtest/: run.sh
runtest/config/: encrypt.json  headers.json
runtest/frontend/assets/css/: index.css
src/: CMakeLists.txt  httplib.h  server.cpp  test.cpp  test.yml
src/config/: CMakeLists.txt  bookcourt_config.cpp  bookcourt_config.h
src/post_request_sender/: CMakeLists.txt  post_request_sender.cpp  post_request_sender.h
src/request_handler/: CMakeLists.txt  request_handler.cpp  request_handler.h
src/task_timer/: CMakeLists.txt  task_timer.cpp  task_timer.h
src/util/: CMakeLists.txt  bookcourt_util.cpp  bookcourt_util.h
test_server/: CMakeLists.txt  test_server.cpp
